--- a/public/index.html
+++ b/public/index.html
@@ -165,6 +165,9 @@
                         $.each(data.services, function (key, item) {
                             html += formatItem(item); 
                         });
+                        $(this).bootpag({
+                            total: data.services.length%3 == 0 ? parseInt(data.services.length/3) : parseInt(data.services.length/3) + 1
+                        })
                         $(".js-table table>tbody").empty();
                         $(".js-table table>tbody").append(html);
                 });
